<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:id="@+id/actionbar"
    android:background="@color/color_f">

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/menu"
        android:background="@drawable/actionbar_button"
        android:visibility="invisible">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/back"
        android:background="@drawable/actionbar_button"
        android:visibility="visible">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/menu"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:id="@+id/fileName"
        android:text="@string/music"
        android:textSize="18sp"
        android:textColor="@color/color_0"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/search"
        android:background="@drawable/actionbar_button"
        android:visibility="gone">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/search"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/fileName"
        android:layout_marginLeft="10dp"
        android:id="@+id/relative_search"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="49dp"
            android:background="@drawable/edit_text">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/editText"
                android:background="@null"
                android:hint="@string/search"
                android:textSize="14sp"
                android:textColorHint="@color/color_6"
                android:textColor="@color/color_3"
                android:ellipsize="none"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/cancel"
            android:background="@drawable/actionbar_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="14sp"
                android:textColor="@color/color_3"/>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_c"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
